--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "mongoose": "^8.0.0",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.1.0",
+    "jsonwebtoken": "9.0.2",
     "cors": "^2.8.5",
     "axios": "^1.6.0",
     "uuid": "^9.0.1",
