--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,23 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.0",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
-    "zustand": "^4.4.0",
+    "framer-motion": "^10.16.0",
+    "heroicons": "^2.0.18",
+    "next": "14.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "heroicons": "^2.0.18"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.31",
+    "@types/node": "25.2.0",
+    "@types/react": "19.2.11",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0"
   }
 }
